# jl-lseg-toolkit

./: .dockerignore  .gitignore  .infisical.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  renovate.json
.claude/: settings.local.json
.claude/agents/: code-architecture-advisor.md  project-organizer.md  timescaledb-access.md
.claude/commands/: timescaledb-access.md
.woodpecker/: ci.yml  renovate.yml  test.yml
bloomberg_scripts/: __init__.py  __main__.py  _legacy.py  cli.py  extract_fx_vol.py  extract_jgb.py  extract_swaptions.py  search_instruments.py  search_securities.py  test_all_instruments.py  test_bond_basis.py  test_bond_futures_basis.py  test_connection.py  test_fx_tickers.py  test_fx_vol_v2.py  test_storage.py  test_storage_standalone.py  test_swaption_eusn.py  test_swaption_nvol.py  test_swaption_tickers.py  test_tickers.py
bloomberg_scripts/caps_floors/: __init__.py  cli.py  extract.py
bloomberg_scripts/common/: __init__.py  connection.py  export.py  fields.py  storage.py
bloomberg_scripts/fx_options/: __init__.py  cli.py  extract.py
bloomberg_scripts/jgb_yields/: __init__.py  cli.py  extract.py
bloomberg_scripts/swaptions/: __init__.py  cli.py  extract.py  tickers.py
ci/: Dockerfile  build-image.sh
docs/: ARCHITECTURE.md  BLOOMBERG_FINDINGS.md  BLOOMBERG_LIVE_VALIDATION_RUNBOOK.md  BLOOMBERG_SCRIPTS.md  BOND_BASIS_RICS.md  CHANGELOG.md  CONTRIBUTING.md  CREDIT_DATA_RICS.md  DATABASE_RECOMMENDATIONS.md  DEVELOPMENT.md  FF_CONTINUOUS_SMOKE_TEST.md  GETTING_STARTED.md  INSTRUMENTS.md  LSEG_API_REFERENCE.md  OUTSTANDING.md  POLYMARKET_RESOLUTION.md  PREDICTION_MARKETS.md  REPO_RATES_RICS.md  RUNBOOK_STORAGE_REFACTOR.md  RUNBOOK_STORAGE_REFACTOR_P2.md  SCHEDULER.md  STORAGE_SCHEMA.md  TEMP_POLYMARKET_FOMC_LINKS.md  TESTING.md  TIMESERIES.md  TIMESERIES_PLAN.md  TIMESERIES_VALIDATION.md  TROUBLESHOOTING.md  WSL_SETUP.md  temporary_missing.md
docs/archive/: FED_FUNDS_EXTRACTION_IMPLEMENTATION.md  INSTRUMENT_VALIDATION_ROADMAP.md  POLYMARKET_IMPLEMENTATION_HISTORY.md  TIMESERIES_PLAN.md  TIMESERIES_VALIDATION.md
docs/instruments/: BLOOMBERG.md  BOND_FUTURES.md  COMMODITY_FUTURES.md  CREDIT.md  EQUITIES.md  FX.md  GOVT_YIELDS.md  INDEX_FUTURES.md  OPTIONS.md  OVERVIEW.md  RATES.md  README.md  ROADMAP.md  STIR_FUTURES.md
docs/plans/: BLOOMBERG_IMPLEMENTATION.md  FED_FUNDS_EXTRACTION.md  POLYMARKET_IMPLEMENTATION.md  PUBLISHING_EVALUATION.md
docs/ric-guides/: TREASURY_DATA_SOURCES.md
examples/: README.md  custom_queries.py  earnings_report.py  equity_screener.py
imports/: treasury-futures-conversion-factor-look-up-tables.xls
scripts/: backfill_ff_strip.py  render_diagrams.py
skills/timescaledb-access/: SKILL.md
src/lseg_toolkit/: __init__.py  excel.py  exceptions.py
tests/: __init__.py  conftest.py  helpers.py  test_client.py  test_data.py  test_earnings_client.py  test_excel.py  test_financial_data.py  test_index_availability.py  test_timezone.py
tests/bloomberg/: test_cli.py  test_connection.py  test_fx_atm_vol.py  test_integration.py  test_jgb.py  test_legacy_surface.py  test_normalize.py
tests/earnings/: __init__.py  test_config.py  test_pipeline.py  test_pipeline_data_quality.py
tests/equity_screener/: __init__.py  test_config.py  test_data_quality.py
tests/timeseries/: __init__.py  test_boc.py  test_boe.py  test_bond_basis.py  test_cache.py  test_cli.py  test_client.py  test_duckdb_storage.py  test_ecb.py  test_export.py  test_fed_funds_extraction.py  test_fedwatch_loader.py  test_fetch.py  test_field_mapping.py  test_fomc.py  test_integration.py  test_kalshi_client.py  test_kalshi_extractor.py  test_models.py  test_pm_models.py  test_pm_schema.py  test_pm_storage.py  test_polymarket_candles_orchestration.py  test_polymarket_client.py  test_polymarket_extractor.py  test_polymarket_resolution.py  test_polymarket_trades.py  (+7 more)
(+107 files in other folders)
