[project]
name = "jl-lseg-toolkit"
version = "0.1.0"
description = "Financial data extraction and reporting tools using LSEG API"
authors = [{ name = "Jonathan Lipworth", email = "jonathan.lipworth@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "finance",
    "lseg",
    "refinitiv",
    "financial-data",
    "earnings",
    "stock-screener",
    "market-data",
    "financial-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    # LSEG/Refinitiv data access
    "lseg-data",
    # Data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Excel export
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    # Date/time handling
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "httpx<0.27",
    # Parquet export for C++/Rust interop
    "pyarrow>=14.0.0",
    # TimescaleDB/PostgreSQL for production storage
    "psycopg[binary,pool]>=3.2.0",
    # Scheduler dependencies
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "xlrd>=2.0.2",
    "pytreasurydirect>=0.1.1",
    "exchange-calendars>=4.13.2",
    "fedtools>=0.0.7",
]

[project.urls]
Homepage = "https://github.com/jlipworth/jl-lseg-toolkit"
Repository = "https://github.com/jlipworth/jl-lseg-toolkit"

[project.scripts]
lseg-earnings = "lseg_toolkit.earnings.cli:main"
lseg-screener = "lseg_toolkit.equity_screener.cli:main"
lseg-setup = "lseg_toolkit.setup_app_key:main"
lseg-extract = "lseg_toolkit.timeseries.cli:main"
lseg-scheduler = "lseg_toolkit.timeseries.scheduler.cli:main"

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=4.3.0",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20260107",
    "pandas-stubs>=2.3.2.250926",
    "testcontainers[postgres]>=4.0.0",
]
notebook = [
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "plotly>=6.3.1",
    "nbformat>=5.10.4",
    "kaleido>=1.1.0",
    "jupyterlab-widgets>=3.0.16",
    "ipywidgets>=8.1.8",
]
dev = [
    { include-group = "test" },
    { include-group = "notebook" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lseg_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "exports",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (let formatter handle it)
    "B904",  # Exception chains (not always necessary)
]

[tool.pylsp-mypy]
enabled = true

[tool.pylsp.plugins.ruff]
enabled = true

[tool.pylsp.plugins.pycodestyle]
enabled = false

[tool.pylsp.plugins.pyflakes]
enabled = false

[tool.pylsp.plugins.mccabe]
enabled = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true  # LSEG, xlsxwriter lack type stubs
